# michel-discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  MINECRAFT_OPTIMIZATIONS.md  Privacy.md  README.md  SECURITY.md  ToS.md  config.example.json  config.py  debug_sftp.py  dict.py  docker-compose.yml  main.py  migrate_spotify.py  pyproject.toml  requirements win.txt  requirements.txt  test_minecraft_optimization.py  test_rcon.py  test_rcon_alternatives.py
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml
extensions/: _anthropicai.py  _iaext.py  _liquipedia_old.py  _minecraftext.py  _openai.py  _satisfactory.py  _speedonsext.py  _streamlabscharityext.py  _twitchext.py  _twitchextv1.py  _zeventext.py  backup.py  backupext.py  birthday.py  birthdayext.py  coloc.py  colocext.py  colocext_old.py  compareai.py  confrerieext.py  embedmanager.py  feur.py  feurext.py  ia.py  liquipedia.py  minecraft.py  minecraftext.py  olympicsext.py  openai.py  random_.py  randomext.py  satisfactory.py  secretsantaext.py  speedons.py  speedonsext.py  spotifyext.py  streamlabs.py  streamlabscharityext.py  temp.py  tricount.py  (+12 more)
extensions/admin/: __init__.py
extensions/coloc/: __init__.py  _common.py  corporation.py  reminders.py
extensions/compareai/: __init__.py  _common.py  ai_client.py  voting.py
extensions/confrerie/: __init__.py  _common.py  editors.py  requests.py  stats.py  updates.py
extensions/giveaway/: __init__.py  _common.py
extensions/mdi/: __init__.py  _common.py  api.py  embeds.py  notifications.py
extensions/minecraft/: __init__.py  _common.py  stats.py  status.py
extensions/moderation/: __init__.py  _common.py  automod.py  commands.py  logging_.py
extensions/olympics/: __init__.py  _common.py  medals.py  tasks.py
extensions/polls/: __init__.py  buttons.py
extensions/reactionroles/: __init__.py  _common.py  buttons.py  commands.py
extensions/reminders/: __init__.py
extensions/rss/: __init__.py  _common.py
extensions/secretsanta/: __init__.py  _common.py  bans.py  buttons.py  draws.py  sessions.py
extensions/spotify/: __init__.py  _common.py  _cooldown.py  auth.py  playlist.py  votes.py
extensions/starboard/: __init__.py  _common.py  listeners.py
extensions/suggestions/: __init__.py  _common.py  buttons.py  commands.py
extensions/tricount/: __init__.py  _common.py  expenses.py  groups.py  recurring.py  reports.py
extensions/twitch/: __init__.py  _common.py  emotes.py  eventsub.py  notifications.py  schedule.py
extensions/uptime/: __init__.py  _common.py  commands.py  monitors.py  notifications.py  socketio_client.py  tasks.py
extensions/util/: __init__.py  _common.py  commands.py  polls.py  reminders.py
extensions/vlrgg/: __init__.py  _common.py  api.py  embeds.py  notifications.py
extensions/xp/: __init__.py  _common.py  commands.py  leaderboard.py  leveling.py  voice.py
extensions/zevent/: __init__.py  _common.py  api.py  commands.py  embeds.py  streams.py  tasks.py
extensions/zunivers/: _common.py  (+5 more)
grafana/: spotify-dashboard.json  xp-dashboard.json
scripts/: generate_config_example.py
src/: config_manager.py  helpers.py  logutil.py  minecraft.py  minecraft_config.py  minecraft_rcon.py  mongodb.py  raiderio.py  spotify.py  utils.py  vlrgg.py
tests/: test_core_config_mutate.py  test_core_db.py  test_core_http.py  test_giveaway_draw.py  test_mdi_client.py  test_moderation.py  test_rss_parser.py  test_smoke.py  test_webui_auth.py  test_webui_cleanup.py  test_webui_ratelimit.py  test_webui_save_config.py  test_webui_secrets.py  test_weighted_messages.py
(+130 files in other folders)
